@@ -1198,7 +1198,7 @@ no-webstart.message=This feature is not available in the WebStart version\n\
 #{{{ Search and replace dialog
 search.title=Search And Replace
 
-search.find=Search for: (press up arrow to recall previous)
+search.find=Search for: (press PAGE_UP to recall previous)
 search.find.mnemonic=s
 search.replace=Replace with:
 search.replace.mnemonic=w
@@ -1235,8 +1235,8 @@ search.directory.mnemonic=d
 
 search.directoryField=Directory:
 search.directoryField.mnemonic=y
-search.filterField=Filter:
-search.filterField.mnemonic=f
+search.filterField=Filename filter:
+search.filterField.mnemonic=m
 search.subdirs=Search subdirectories
 search.subdirs.mnemonic=u
 search.choose=Choose...
@@ -1245,6 +1245,7 @@ search.synchronize=Synchronize
 search.synchronize.mnemonic=z
 
 search.findBtn=Find
+search.findBtn.mnemonic=f
 search.replaceAndFindBtn=Replace & Find
 search.replaceAndFindBtn.mnemonic=r
 search.replaceAllBtn=Replace All
